--- a/DBSysReport/AppForm.resx
+++ b/DBSysReport/AppForm.resx
@@ -120,6 +120,34 @@
   <metadata name="appMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="ChallengeDataLabel.Text" xml:space="preserve">
+    <value>Серийный номер изделия:
+_______________
+
+Наименование объекта контроля:
+_______________
+
+Серийный номер объекта контроля:
+_______________
+
+Заводской номер объекта контроля:
+_______________
+
+В составе изделия:
+_______________
+
+Вид испытания:
+_______________
+
+Место проведения испытания:
+_______________
+
+Описание:
+_______________
+
+версия ПЛИС:
+_______________</value>
+  </data>
   <data name="pdfViewer.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
@@ -128,4 +156,7 @@
         AAAAAQAAAAAAAAAAAAAAAAwAAAAADgAAwCwAABMeAAAL
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>48</value>
+  </metadata>
 </root>
